<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_header"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/back_rela"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:background="@drawable/back_arrow_white"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollablContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerView" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/txt_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/axiforma_semibold"
                android:gravity="center"
                android:text="@string/addprofile"
                android:textColor="@color/myvacalablack"
                android:textSize="14sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:textColor="@color/myvacalablack"
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:fontFamily="@font/axiforma_bold"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/edt_name"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress"
                    android:padding="10dp"
                    android:background="@drawable/rectangle_corner"
                    android:textSize="14sp"
                    android:fontFamily="@font/axiforma_semibold"
                    android:hint="@string/yourname"
                    tools:ignore="Autofill,LabelFor" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:textColor="@color/myvacalablack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emailid"
                    android:textSize="16sp"
                    android:fontFamily="@font/axiforma_bold"
                    android:visibility="gone"
                    />
                <EditText
                    android:id="@+id/edt_emailid"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress"
                    android:padding="10dp"
                    android:background="@drawable/rectangle_corner"
                    android:textSize="14sp"
                    android:fontFamily="@font/axiforma_semibold"
                    android:hint="@string/youremail"
                    tools:ignore="Autofill,LabelFor" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:textColor="@color/myvacalablack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobileno"
                    android:textSize="16sp"
                    android:fontFamily="@font/axiforma_bold"
                    android:visibility="gone"
                    />
                <TextView
                    android:id="@+id/txt_mobilenumber"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:background="@drawable/rectangle_corner"
                    android:textSize="14sp"
                    android:fontFamily="@font/axiforma_semibold"
                    android:hint="@string/yourmobileno"
                    tools:ignore="Deprecated" />



            </LinearLayout>




        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/avi_indicator"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:src="@drawable/loader"
        />

    <LinearLayout
        android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="end"
            android:id="@+id/iv_signin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/forward_arrow_rounded_orange"
            tools:ignore="ContentDescription"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"/>


    </LinearLayout>


</RelativeLayout>