<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTwo"
    android:orientation="vertical">


    <include
        android:id="@+id/toolbar"
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_otp_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/axiforma_semibold"
        android:gravity="center"
        android:text="@string/wehavesenta4digitotp"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/txt_entered_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_otp_message"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/axiforma_semibold"
        android:gravity="center"
        android:text="+919767676861"
        android:textColor="@color/black"
        android:textSize="23sp" />
    <TextView
        android:id="@+id/txt_otp_message1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_entered_mobile_number"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/axiforma_semibold"
        android:gravity="center"
        android:text="@string/verification_code_text"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <com.mukesh.OtpView
        android:layout_below="@+id/txt_otp_message1"
        android:layout_marginTop="20dp"
        android:id="@+id/verify_otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/axiforma_semibold"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:state_filled="true"
        app:itemCount="4"
        app:itemSpacing="10dp"
        app:lineColor="@drawable/otp_focus_background"
        app:viewType="rectangle" />

    <LinearLayout
        android:id="@+id/timer_layout"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:visibility="visible"
        android:layout_below="@+id/verify_otp_view"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txt_timer_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/axiforma_semibold"
            android:text="02:34"
            android:textColor="@color/myvacalabutton"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_Resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_otp_view"
        android:layout_alignParentRight="true"
        android:layout_marginTop="35dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/axiforma_semibold"
        android:gravity="center"
        android:text="RESEND OTP"
        android:textColor="@color/warmGreyFour"
        android:textSize="15sp"/>

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/txt_Resend"
        android:id="@+id/book_now_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@color/myvacalabutton"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="100dp"
        app:cardElevation="5dp">



        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/axiforma_semibold"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="true"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lnr_invalid_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/greyishBrownSeven"
        android:background="@drawable/rounded_corner_layout"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/axiforma_semibold"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/invalid_otp"
            android:textColor="@color/myvacalabutton"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/axiforma_semibold"
            android:gravity="center"
            android:text="@string/re_enter_otp"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>




    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:indicatorColor="@color/mediumPinkTwo"
        app:indicatorName="LineSpinFadeLoaderIndicator" />


</RelativeLayout>